--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,7 +559,7 @@ header .header-data .header-right h4::before {
     height: 17px;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .yellow-btn.profile_yellow {
     text-align: center;
   }
@@ -569,7 +569,7 @@ header .header-data .header-right h4::before {
   padding: 17px 38px;
   margin-bottom: 0;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .yellow-btn.profile_yellow a {
     padding: 17px 24px;
   }
@@ -1009,7 +1009,7 @@ footer .footer-data .footer-right li:last-child::after {
     width: 100%;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data {
     padding: 47px 23px 52px 23px;
     margin-bottom: 90px;
@@ -1029,7 +1029,7 @@ footer .footer-data .footer-right li:last-child::after {
   color: #31b762;
   font-weight: 700;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .account-h3 {
     margin-bottom: 19px;
   }
@@ -1040,7 +1040,7 @@ footer .footer-data .footer-right li:last-child::after {
 .right-sidebar .profile_data .login-data.email-logindata .login-detail h4:last-child {
   width: 380px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data {
     margin-bottom: 26px;
   }
@@ -1053,7 +1053,7 @@ footer .footer-data .footer-right li:last-child::after {
 .right-sidebar .profile_data .login-data.mb-35 {
   margin-bottom: 35px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data.mb-35 {
     margin-bottom: 26px;
   }
@@ -1062,7 +1062,7 @@ footer .footer-data .footer-right li:last-child::after {
   display: flex;
   gap: 55px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data.mb-35 li {
     flex-direction: column;
     gap: 6px;
@@ -1071,7 +1071,7 @@ footer .footer-data .footer-right li:last-child::after {
 .right-sidebar .profile_data .login-data .dot-style {
   padding-left: 10px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data .dot-style {
     margin-bottom: 62px;
   }
@@ -1089,7 +1089,7 @@ footer .footer-data .footer-right li:last-child::after {
   height: 4px;
   border-radius: 50%;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data li {
     gap: 20px;
   }
@@ -1097,7 +1097,7 @@ footer .footer-data .footer-right li:last-child::after {
 .right-sidebar .profile_data .login-data li .login-detail {
   display: flex;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data li .login-detail {
     flex-direction: column;
     margin-bottom: 15px;
@@ -1106,7 +1106,7 @@ footer .footer-data .footer-right li:last-child::after {
 .right-sidebar .profile_data .login-data li .login-detail h4 {
   width: 150px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data li .login-detail h4 {
     width: 100%;
   }
@@ -1118,7 +1118,7 @@ footer .footer-data .footer-right li:last-child::after {
   line-height: 24px;
   color: #3a3a3a;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .right-sidebar .profile_data .login-data li h4 {
     margin-bottom: 4px;
   }
@@ -2747,9 +2747,9 @@ footer .footer-data .footer-right li:last-child::after {
     margin-bottom: 40px;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quotation-progress .quotation-title {
-    justify-content: start;
+    justify-content: center;
     gap: 29px;
     margin-bottom: 10px;
   }
@@ -2784,9 +2784,10 @@ footer .footer-data .footer-right li:last-child::after {
   justify-content: space-between;
   margin-bottom: 28px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quotation-progress .quotation-status {
     margin-bottom: 10px;
+    justify-content: center;
   }
 }
 .quotation-progress .quotation-status .status-btn {
@@ -2834,15 +2835,16 @@ footer .footer-data .footer-right li:last-child::after {
 .quotation-progress .progress-data .bookdata {
   margin-bottom: 51px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quotation-progress .progress-data .bookdata .progress-img {
     margin-bottom: 24px;
+    text-align: center;
   }
 }
 .quotation-progress .progress-data .bookdata .progress-right {
   margin-top: 16px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quotation-progress .progress-data .bookdata .progress-right {
     margin-top: 0;
   }
@@ -2854,7 +2856,7 @@ footer .footer-data .footer-right li:last-child::after {
   color: #444444;
   margin-bottom: 34px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quotation-progress .progress-data .bookdata .progress-right h2 {
     margin-bottom: 22px;
   }
@@ -2907,7 +2909,7 @@ footer .footer-data .footer-right li:last-child::after {
   gap: 139px;
   margin-bottom: 34px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quotation-progress .bottom-table-title {
     gap: 99px;
   }
@@ -2929,7 +2931,7 @@ footer .footer-data .footer-right li:last-child::after {
   height: 27px;
   background-color: #444444;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quotation-progress .bottom-table-title .nav-item:first-child .nav-link:after {
     right: -57px;
   }
