--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -153,7 +153,7 @@ margin-bottom: 14px;
       width: 227px;
     }
   }
-  @media (max-width: #{$sm}) {
+  @media (max-width: 767px) {
     width: 100%;
     &.custm-down{
       width: 100%;
@@ -3211,6 +3211,7 @@ p{
       padding: 71px 47px 80px 47px;
       height: 540px ;
     }
+    
     @media (max-width:690px) {
       width: 448px;
      }
@@ -3284,9 +3285,16 @@ p{
           top: 15px;
           height: 210px;
            }
-        @media (max-width: #{$sm}) {
+           @media (max-width:767px) {
+            left: 33px;
+            height: 229px;
+           }
+        @media (max-width:#{$sm}) {
          left: 13px;
          height: 287px;
+           }
+        @media (max-width:690px) {
+         left: 22px;
            }
         @media (max-width: #{$xss}) {
          height: 258px;
