--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -518,9 +518,9 @@ header {
   background-color: $primary-color;
   width: 208px;
   height: 120vh;
-  // @media (max-width: #{$xlll}) {
-  //   height: auto;
-  // }
+  @media (max-width: #{$xlll}) {
+    height: auto;
+  }
   &.partner{
     height: auto;
   }
@@ -2006,6 +2006,9 @@ footer {
         }
         &.action-mobile{
         gap: 12px;
+        @media (max-width: 767px) {
+          justify-content: center;
+          }
         .action-btn{
           display: flex;
           // justify-content: space-between;
