--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5500,7 +5500,7 @@ margin-bottom: 22px;
       #787878;
       font-weight: 400;
       padding-left: 30px;
-      @media (max-width: #{$sm}) {
+      @media (max-width: 767px) {
         padding-left: 0;
         margin-top: 20px;
            }
@@ -5513,6 +5513,11 @@ margin-bottom: 22px;
       display: flex;
       align-items: center;
 gap: 28px;
+@media (max-width: 767px) {
+  flex-direction: column;
+  align-items: start;
+  gap: 10px;
+     }
       }
       label{
         font-size: 16px;
